force-app/main/default/objects/Loop__Text_Group_Text_Snippet__c/Loop__Text_Group_Text_Snippet__c.object-meta.xml
<CustomObject>
    <label>Snippet Group Snippet</label>
    <nameField>
        <displayFormat>CGC-{000000}</displayFormat>
        <label>Snippet Group Snippet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snippet Group Snippets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>