force-app/main/default/objects/Loop__Text_Group_Text_Snippet__c/fields/Loop__Filter__c.field-meta.xml
<CustomField>
    <fullName>Loop__Filter__c</fullName>
    <label>Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>