force-app/main/default/objects/Loop__Text_Group_Text_Snippet__c/fields/Loop__Level__c.field-meta.xml
<CustomField>
    <fullName>Loop__Level__c</fullName>
    <label>Level (Indent)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>